Not only master

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,11 @@ env:
     - LUA=lua5.2
     - LUA=lua5.3
 
-branches:
-  only:
-    - master
 
 before_install:
   - source .travis/setenv_lua.sh
 
-install:
-  - echo 'Need INSTEAD to run, not installable.'
+install: true
 
 script:
   - ./checklua.sh
