--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,14 @@ env:
     - LUA=lua5.3
 
 
-before_install:
-  - source .travis/setenv_lua.sh
 
-install: true
+install: source .travis/setenv_lua.sh
 
 script:
   - ./checklua.sh
 
 notifications:
   email:
-    on_success: change
-    on_failure: always
+    on_success: never
+    on_failure: change
+  irc: "chat.freenode.net#vyo-build"
